basic.yaml
apiVersion: v1
kind: Pod
metadata:
  name: basicpod
  labels:
    type: webserver
spec:
  volumes:
    - name: weblog-pv-storage
      persistentVolumeClaim:
        claimName: weblog-pv-claim
    - name: log-config          # volume declaration to the pod (and two lines below)
      configMap:
        name: fluentd-config
  containers:
  - name: webcont
    image: nginx
    ports:
    - containerPort: 80
    volumeMounts:
      - mountPath: "/var/log/nginx"
        name: weblog-pv-storage
  - name: fdlogger
    image: fluent/fluentd
    env:                      # env parameter for volume (and two lines below)
    - name: FLUENTD_OPT
      value: -c /etc/fluentd-config/fluentd.conf
    volumeMounts:
      - mountPath: "/var/log"
        name: weblog-pv-storage
      - name: log-config        # mounting of volume to fluentd container
        mountPath: "/etc/fluentd-config"
