design-review1.yaml
apiVersion: v1
kind: Pod
metadata:
 name: design-pod1
spec:
  containers:
  - image: vish/stress
    name: design-pod1
    resources:
      limits:
        cpu: "2"
        memory: "1096Mi"
      requests:
        cpu: "1"
        memory: "500Mi"
    args:
    - -cpus
    - "1"
    - -mem-total
    - "1036Mi"
    - -mem-alloc-size
    - "500Mi"
    - -mem-alloc-sleep
    - "1s"


#Domain CPU requirements
