second.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secondapp
  labels:
    example: second
spec:
  serviceAccountName: secret-access-sa
#  securityContext:
#    runAsUser: 1000
  containers:
  - name: webserver
    image: nginx
  - name: busy 
    image: busybox
    command:
      - sleep
      - "3600"
    securityContext:
      runAsUser: 2000
      allowPrivilegeEscalation: false
#      capabilities:
#        add: ["NET_ADMIN", "SYS_TIME"]
#    volumeMounts:
#    - name: mysql
#      mountPath: /mysqlpassword
#  volumes:
#  - name: mysql
#    secret:
#      secretName: lfsecret
