troubleshoot-review1.yaml
#apiVersion: extensions/v1
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  generation: 1
  labels:
    run: igottrouble
  name: igottrouble
spec:
  #replicas: 0  # when deployed there were no deployments under "READY" or "AVAILABLE"
  replicas: 1
  selector:
    matchLabels:
      #run: ugottrouble
      run: igottrouble
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: igottrouble
    spec:
      containers:
      - image: vish/stress
        imagePullPolicy: Always
        name: igottrouble
        resources:
          limits:
            cpu: "1"
            memory: "1Gi"
          requests:
            #cpu: "2.5"
            cpu: "1"
            memory: "500Mi"
        args:
        - -cpus
        #- "2"
        - "1"
        - -mem-total
        - "1950Mi"
        - -mem-alloc-size
        - "100Mi"
        - -mem-alloc-sleep
        - "1s"
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
