webtwo-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webtwo
  labels:
    rev: webtwo
spec:
  containers:
  - name: wlniao-website
    image: wlniao/website
    ports:
    - containerPort: 80
