webone-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webone-svc
spec:
  selector:
    rev: webone
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
