webtwo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webtwo-svc
spec:
  selector:
    rev: webtwo
  ports:
    - port: 80
      targetPort: 80  
  type: NodePort
