ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    kubernetes.io/ingress.class: nginx          
  namespace: default
spec:
  rules:
  - host: webone.com
    http:
      paths:
      - backend:
          service:
            name: webone-svc
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: webtwo.com
    http:
      paths:
      - backend:
          service:
            name: webtwo-svc
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
